<resources>
    <string name="action_settings">Settings</string>
    <string name="to_pay">To Pay</string>
        <string name="app_name">Tip Calculator</string>
        <string name="hello_world">Hello world!</string>
        <string name="custom_percent">Custom %</string>
        <string name="ten_percents">10%</string>
        <string name="amount">Amount</string>
        <string name="fifteen_percent">15 %</string>
        <string name="tip">Tip</string>
        <string name="Total">Total</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="bill">Bill</string>
    <string name="item_price_length">Please enter a shorter price</string>
    <string name="to_tip">Tip</string>
    <string name="banner_ad_unit_id">ca-app-pub-3004828240532820/7284390793</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
</resources>
