<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="5"
        android:alignmentMode="alignBounds">
        <TextView
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:id="@+id/tip_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_tip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal" />

        <SeekBar
            android:layout_columnSpan="3"
            android:layout_rowSpan="2"
            android:id="@+id/sbar_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="30"
            android:progress="10"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:id="@+id/tv_tip_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_bill_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tip"
            android:id="@+id/tv_tip_name"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/total"
            android:id="@+id/tv_total_name"
            android:layout_gravity="right"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@android:color/holo_blue_dark"
            android:text="0"
            android:id="@+id/tv_bill"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@android:color/holo_blue_dark"
            android:text="0"
            android:id="@+id/tv_tip_value"
            android:gravity="center_horizontal" />

        <TextView
            android:text="0"
            android:id="@+id/tv_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@android:color/holo_blue_dark"
            android:layout_gravity="right"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price"
            android:id="@+id/tv_price_name" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/et_amount" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_add"
            android:id="@+id/ib_addItem" />

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
                android:id="@+id/lv_items"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
